@@ -1,3 +1,7 @@
+2013-05-02  Hannes Weisbach <hannes_weisbach@gmx.net>
+
+	* avrftdi_private.h: Add libusb-1.0 include to fix include order in windows.
+
 2013-04-30  Hannes Weisbach <hannes_weisbach@gmx.net>
 
 	* tpi.h: Add definition for TPI Identification Code
